---
config:
  layout: dagre
---
classDiagram
    direction TB

    class UserKind {
        common
        seller
    }
    <<enumeration>> UserKind

    class DocumentType {
        cpf
        cnpj
    }
    <<enumeration>> DocumentType

    class LedgerEntryType {
        credit
        debit
    }
    <<enumeration>> LedgerEntryType

    class LedgerOperation {
        manual
        transfer
    }
    <<enumeration>> LedgerOperation

    class TransferStatus {
        pending
        completed
        failed
        reverted
    }
    <<enumeration>> TransferStatus

    class User {
        -UUID id
        -string fullName
        -UserKind kind
        -DocumentType documentType
        -string document
        -string email
        -string password
        -Wallet wallet
        +canTransfer() bool
        +cantTransfer() bool
    }

    class Seller {
        +canTransfer() bool
    }

    class Common {
        +canTransfer() bool
    }

    class Wallet {
        -UUID id
        -UUID userId
        -float balance
        -float committedBalance
        -LedgerEntry[] ledgerEntries
        +deposit(float amount)
        +credit(float amount)
        +hasEnoughFunds(float amount) bool
        +transferTo(Wallet payerWallet, Transfer transfer)
        -guardAmount(float amount)
        -appendEntry(LedgerEntry entry)
        -calculateBalance() float
    }

    class LedgerEntry {
        -UUID id
        -UUID walletId
        -float amount
        -LedgerEntryType type
        -LedgerOperation operation
        -?string transferId
        +isCredit() bool
        +isDebit() bool
    }

    class Transfer {
        -UUID id
        -Wallet payerWallet
        -Wallet payeeWallet
        -float amount
        -TransferStatus status
        -?string failedReason
        +complete()
        +fail(string reason)
        +isntProcessable() bool
    }

    User <|-- Seller
    User <|-- Common
    User "1" *-- "1" Wallet : owns
    User --* UserKind : kind
    User --* DocumentType : document
    LedgerEntry --* LedgerEntryType : uses
    LedgerEntry --* LedgerOperation : uses
    LedgerEntry "0..*" -- "0..1" Transfer : transferId
    Transfer --* TransferStatus : uses
    Wallet "1" -- "0..*" LedgerEntry
    Transfer "1" -- "1" Wallet : payerWallet
    Transfer "1" -- "1" Wallet : payeeWallet
